k8s-manifests/demo_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
