k8s-manifests/demo_application-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demoapplication
  labels:
    app: demoapplication
  namespace: test
spec:
  type: NodePort
  ports:
  - name: http
    port: 9900
    protocol: TCP
    targetPort: 8080
  selector:
    app: demoapplication
