k8s-manifests/demo_application-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: demoapplication
  name: demoapplication
  namespace: test
spec:
  tls:
  - hosts:
    - demoapp.gig.aws.cps.vodafone.com
    secretName: gig3-multisite-cert-secret 
  rules:
  - host: demoapp.gig.aws.cps.vodafone.com
    http:
      paths:
      - backend:
          serviceName: demoapplication
          servicePort: 9900
        path: /
